--- a/agent.onboarding/pom.xml
+++ b/agent.onboarding/pom.xml
@@ -78,7 +78,12 @@
             <artifactId>hibernate-validator</artifactId>
             <version>8.0.1.Final</version>
         </dependency>
-
+        <dependency>
+            <groupId>
+                org.springframework.boot
+            </groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
