--- a/agent.onboarding/pom.xml
+++ b/agent.onboarding/pom.xml
@@ -79,10 +79,22 @@
             <version>8.0.1.Final</version>
         </dependency>
         <dependency>
-            <groupId>
-                org.springframework.boot
-            </groupId>
+            <groupId>jakarta.mail</groupId>
+            <artifactId>jakarta.mail-api</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>6.0.8</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
