Correct files for uat_deploy

--- a/agent.onboarding/pom.xml
+++ b/agent.onboarding/pom.xml
@@ -13,6 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>wendi.agents</name>
     <description>Wendi Agent</description>
+    <packaging>jar</packaging>
     <url/>
     <licenses>
         <license/>
@@ -121,3 +122,4 @@
     </build>
 
 </project>
+
